--- a/.github/actions/issue-maker/action.yml
+++ b/.github/actions/issue-maker/action.yml
@@ -1,7 +1,8 @@
 name: "I have issues"
 
 description: "consume the output of the previous action and create a new issue in the repository"
-
+env:
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 inputs:
   joke:
     description: "This will become the body of the created issue"
